# SafeCast

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml  render.yaml  requirements.txt
SafeCast/: app.py  config.py
SafeCast/Crowd_Anamoly/: Train_panic_model.py  panic_crowd_monitoring.py  panic_model_params.json  run_panic_detection.py
SafeCast/Crowd_Anamoly/evidence/: panic_alert_2025-05-03_03-16-40_metadata.json  panic_alert_2025-05-03_10-58-24_metadata.json  panic_alert_2025-05-03_11-44-34_metadata.json  panic_alert_2025-05-03_12-15-58_metadata.json  panic_alert_2025-05-03_12-17-05_metadata.json  panic_alert_2025-05-03_12-18-26_metadata.json
SafeCast/data/: detection_classes.json  threat_detection_classes.json
SafeCast/services/: chat.py  firebase.py
SafeCast/templates/: dashboard.html  index.html  layout.html  panic detection.html  profile.html  signin.html  signup.html  video.html  video_view.html
